# prometheus-external-targets

./: .dockerignore  Dockerfile  LICENSE  README.md  entrypoint.sh  pyproject.toml  requirements.txt
.github/: CODEOWNERS
external_targets/: app.py  environment.py  main.py
external_targets/utils/: get_ip.py  kube_api.py
helm/external-targets/: Chart.yaml  values.yaml
helm/external-targets/templates/: authorization.yaml  configmap.yaml  deployment.yaml
helm/external-targets/templates/tests/: test-connection.yaml
helm/prometheus-external-targets/: Chart.yaml  values.yaml
helm/prometheus-external-targets/templates/: _helpers.tpl  deployment.yaml  service.yaml  servicemonitor.yaml
