[tool.poetry]
name = "external-targets"
version = "0.0.4"
description = ""
authors = ["Justin Stewart <justin.stewart@points.com>"]
readme = "README.md"
packages = [{include = "external_targets"}]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0"
kubernetes = "^26.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
external_targets = "external_targets.main:main"
